data/src/objects/MicroTrigger__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Before Insert</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>After Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Undelete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderOfExecution__c</fullName>
        <label>Order Of Execution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreventRecursive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, the MicroTrigger Actions will run only one</description>
        <label>Prevent Recursive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MicroTriggerTestingMock__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MicroTrigger</label>
    <pluralLabel>MicroTriggers</pluralLabel>
</CustomObject>